tesi-andi/_build/html/reports/main_pipeline.log
Traceback (most recent call last):
  File "c:\users\dulla\pycharmprojects\thesis_data_analisys\venv\lib\site-packages\jupyter_cache\executors\utils.py", line 51, in single_nb_execution
    executenb(
  File "c:\users\dulla\pycharmprojects\thesis_data_analisys\venv\lib\site-packages\nbclient\client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "c:\users\dulla\pycharmprojects\thesis_data_analisys\venv\lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "c:\users\dulla\pycharmprojects\thesis_data_analisys\venv\lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "C:\Users\DULLA\AppData\Local\Programs\Python\Python38\lib\asyncio\base_events.py", line 608, in run_until_complete
    return future.result()
  File "c:\users\dulla\pycharmprojects\thesis_data_analisys\venv\lib\site-packages\nbclient\client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "c:\users\dulla\pycharmprojects\thesis_data_analisys\venv\lib\site-packages\nbclient\client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "c:\users\dulla\pycharmprojects\thesis_data_analisys\venv\lib\site-packages\nbclient\client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
import sys
sys.path.append(r"C:\Users\DULLA\PycharmProjects\Thesis_Data_Analisys")
from random import seed, randint
from time import process_time

import matplotlib.image as mpimg
import matplotlib.pyplot as plt
import networkx as nx
import numpy as np

from CMST_package.population_generator import draw_graph, generate_population, TREE_LIKE_LAYOUT, breeding_mutation, \
self_mutation, prim, measure_branch

# MODIFICAMI!
NUM_NODES = 10
NUMB_GENER = 300
MESH_LIKE_LAYOUT = 0
HOF_SIZE = 3
MAXIMUM_FITNESS = 1000
POP_SIZE = 100
SELF_MUTATE_PROB = 0.3
CROSS_MUTATE_PROB = 0.7
ROOT = 5
CAPACITY = 4

[comment]: <> (img = mpimg.imread&#40;'../artifacts/flowchart.PNG'&#41;)

[comment]: <> (plt.figure&#40;figsize=&#40;12, 12&#41;&#41;)

[comment]: <> (plt.axis&#40;"off"&#41;)

[comment]: <> (imgplot = plt.imshow&#40;img&#41;)
------------------

[1;36m  Input [1;32mIn [1][1;36m[0m
[1;33m    [comment]: <> (img = mpimg.imread&#40;'../artifacts/flowchart.PNG'&#41;)[0m
[1;37m                ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid syntax

SyntaxError: invalid syntax (3860080402.py, line 26)

